fix contrasts in regular themes

--- a/blocks/DropArea/drop-area.css
+++ b/blocks/DropArea/drop-area.css
@@ -32,14 +32,7 @@
   background: var(--uc-background);
 }
 
-:where([uc-drop-area])[with-icon]
-  > .uc-content-wrapper:is([drag-state='active'], [drag-state='near'], [drag-state='over'])
-  :is(.uc-text, .uc-icon-container) {
-  color: var(--uc-primary);
-}
-
 :where([uc-drop-area]):is([drag-state='active'], [drag-state='near'], [drag-state='over'], :hover) {
-  color: var(--uc-primary);
   background: var(--uc-primary-transparent);
   border-color: var(--uc-primary-transparent);
 }
@@ -101,11 +94,6 @@
 
 :where([uc-drop-area])[with-icon] uc-icon:last-child {
   transform: translateY(48px);
-}
-
-:where([uc-drop-area])[with-icon]:hover .uc-icon-container,
-:where([uc-drop-area])[with-icon]:hover .uc-text {
-  color: var(--uc-primary);
 }
 
 :where(.uc-contrast) :where([uc-drop-area])[with-icon]:hover .uc-icon-container,
