--- a/blocks/FileItem/file-item.css
+++ b/blocks/FileItem/file-item.css
@@ -127,7 +127,7 @@ uc-file-item .uc-badge uc-icon svg {
 }
 
 uc-file-item .uc-progress-bar {
-  opacity: 0.5;
+  opacity: 0.7;
   top: calc(100% - 2px);
   height: 2px;
 }
